--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     margin: 0px;
     padding: 0px;
     background: url("../images/bg_dark_green.png");  
-    background-color: inherit;
+    background-color: #4286f4;
     font-size: 16px; 
     font-family: "Trebuchet MS", Helvetica, sans-serif;
     color: #000;
